force-app/main/default/objects/Blacklist_Audit__c/Blacklist_Audit__c.object-meta.xml
<CustomObject>
    <label>Blacklist Audit</label>
    <nameField>
        <displayFormat>BLA-{0000}</displayFormat>
        <label>Blacklist Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklist Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>