force-app/main/default/objects/Blacklist_Audit__c/fields/Blacklisted_Word__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Word__c</fullName>
    <description>stores the word or custom expression which triggered the breach</description>
    <label>Blacklisted Word or Expression</label>
    <length>200</length>
    <type>Text</type>
</CustomField>