force-app/main/default/objects/Blacklist_Audit__c/fields/isValidBlackList__c.field-meta.xml
<CustomField>
    <fullName>isValidBlackList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isValidBlackList</label>
    <type>Checkbox</type>
</CustomField>